exp fits in the phone height. iframes are 47vh heigh. menu in buttons

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ top: 0;
 left: 0;
 width: 100%;
 height: 100%;
+max-height: 50vh;
 }
   </style>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
@@ -107,9 +108,70 @@ height: 100%;
   <div class="w3-content">
     <div id="Section2" class="w3-card w3-white w3-round " style="display: none">
 
+      <div class="Content2" style="display: none">
+        <h6 class="w3-text-grey w3-margin-right w3-right">Copenhagen</h6>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Intern / <a href="http://www.koebenhavnerture.dk/" target="_blank">
+                Københavner Ture</a></b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i> Oct 2018 - Nov 2018</h6>
+          <p>In a multidisciplinary team, we developed an AR
+            solution for this local guided-tours company.
+            Our goal is to "Bring Stories Alive" as well as to add a competitive advantage in the company's SoMe
+            presence. Received good feedback.
+            <hr>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Intern / <a href="http://www.chase-race.com/" target="_blank">Chase-Race</a></b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2018 - Oct 2018</h6>
+          <p>Working with various product development tecniques, we designed and developed a VR experience for
+            marketing purposes.
+            We went also through an intensive 3-day course on Unity 3D.</p><br>
+        </div>
+      </div>
 
       <div class="Content2" style="display: none">
-          <h3 class="w3-text-grey w3-margin w3-right w3-padding-16">Athens</h3>
+        <h6 class="w3-text-grey w3-margin-right w3-right">Copenhagen</h6>
+
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Bartender / <a href="https://www.cosybar.dk/" target="_blank">Cosy Bar</a></b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sep 2017 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
+          <p>Old gaybar in downtown Copenhagen, cosy atmosphere. I work long night shifts every other weekend, so I
+            get
+            more time to concentrate on my studies.
+            <hr>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Head Waiter / <a href="http://asador.dk/" target="_blank">Asador</a></b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2016 - Sep 2017</h6>
+          <p> Argentenian Stakehouse in Cristianshavn borrow, good meat and whine. I still have excellent
+            relationship
+            with the owners, and work extra shifts when needed.</p><br>
+        </div>
+      </div>
+
+      <div class="Content2" style="display: none">
+        <h6 class="w3-text-grey w3-margin-right w3-right">Madrid</h6>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Fashion Advisor / <a href="https://www.uterque.com/dk/" target="_blank">“Uterqüe”
+                Flagship Store (Inditex)</a></b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Nov 2015 - Jun 2016</h6>
+          <p>▪ Exclusive fashion advising to premium (high value) customers <br>
+            ▪ Zoning & Visual Merchandising <br>
+            ▪ Sales maximization according to pre-specified KPIs</p>
+          <hr>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Sales Manager & Shift Manager / <a href="https://www.facebook.com/BovinusLuxury/"
+                target="_blank">Bovinus Luxury</a></b></h5>
+          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sep 2014 - Sep 2015</h6>
+          <p>▪ Management of the day-to-day operation of a premium food market stall <br>
+            ▪ Service quality management and assurance <br>
+            ▪ Selection and training of employees</p>
+        </div>
+      </div>
+
+      <div class="Content2" style="display: none">
+        <h6 class="w3-text-grey w3-margin-right w3-right">Athens</h6>
 
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Member of the Organizing Committee / <a href="https://www.athenspride.eu" target="_blank">Athens
@@ -132,81 +194,14 @@ height: 100%;
         </div>
       </div>
 
-
-      <div class="Content2" style="display: none">
-        <h3 class="w3-text-grey w3-margin w3-right w3-padding-16">Madrid</h3>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>Fashion Advisor / <a href="https://www.uterque.com/dk/" target="_blank">“Uterqüe”
-                Flagship Store (Inditex)</a></b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Nov 2015 - Jun 2016</h6>
-          <p>▪ Exclusive fashion advising to premium (high value) customers <br>
-            ▪ Zoning & Visual Merchandising <br>
-            ▪ Sales maximization according to pre-specified KPIs</p>
-          <hr>
-        </div>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>Sales Manager & Shift Manager / <a href="https://www.facebook.com/BovinusLuxury/"
-                target="_blank">Bovinus Luxury</a></b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sep 2014 - Sep 2015</h6>
-          <p>▪ Management of the day-to-day operation of a premium food market stall <br>
-            ▪ Service quality management and assurance <br>
-            ▪ Selection and training of employees</p>
-        </div>
-      </div>
-
-
-      <div class="Content2" style="display: none">
-          <h3 class="w3-text-grey w3-margin w3-right w3-padding-16">Copenhagen</h3>
-
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>Bartender / <a href="https://www.cosybar.dk/" target="_blank">Cosy Bar</a></b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Sep 2017 - <span class="w3-tag w3-teal w3-round">Current</span></h6>
-          <p>Old gaybar in downtown Copenhagen, cosy atmosphere. I work long night shifts every other weekend, so I
-            get
-            more time to concentrate on my studies.
-            <hr>
-        </div>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>Head Waiter / <a href="http://asador.dk/" target="_blank">Asador</a></b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jun 2016 - Sep 2017</h6>
-          <p> Argentenian Stakehouse in Cristianshavn borrow, good meat and whine. I still have excellent
-            relationship
-            with the owners, and work extra shifts when needed.</p><br>
-        </div>
-      </div>
-
-
-      <div class="Content2" style="display: none">
-          <h3 class="w3-text-grey w3-margin w3-right w3-padding-16">Copenhagen</h3>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>Intern / <a href="http://www.koebenhavnerture.dk/" target="_blank">
-                Københavner Ture</a></b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i> Oct 2018 - Nov 2018</h6>
-          <p>In a multidisciplinary team, we developed an AR
-            solution for this local guided-tours company.
-            Our goal is to "Bring Stories Alive" as well as to add a competitive advantage in the company's SoMe
-            presence. Received good feedback.
-            <hr>
-        </div>
-        <div class="w3-container">
-          <h5 class="w3-opacity"><b>Intern / <a href="http://www.chase-race.com/" target="_blank">Chase-Race</a></b></h5>
-          <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2018 - Oct 2018</h6>
-          <p>Working with various product development tecniques, we designed and developed a VR experience for
-            marketing purposes.
-            We went also through an intensive 3-day course on Unity 3D.</p><br>
-        </div>
-      </div>
-
       <!--SECOND SLIDER, controls the content of the Section2 above -->
       <div id="Demo2" class="slidecontainer w3-container w3-padding-16">
         <div class="w3-center">
           <div class="w3-bar">
-            <a href="#" class="w3-bar-item w3-button">&laquo;</a>
             <a href="#" class="w3-button pContent2 w3-hover-blue w3-blue" onclick="pagination('Content2',1,'w3-blue')">1</a>
             <a href="#" class="w3-button pContent2 w3-hover-blue" onclick="pagination('Content2',2,'w3-blue')">2</a>
             <a href="#" class="w3-button pContent2 w3-hover-blue" onclick="pagination('Content2',3,'w3-blue')">3</a>
             <a href="#" class="w3-button pContent2 w3-hover-blue" onclick="pagination('Content2',4,'w3-blue')">4</a>
-            <a href="#" class="w3-button">&raquo;</a>
           </div>
         </div>
       </div>
@@ -220,6 +215,37 @@ height: 100%;
       <br>
 
       <div class="Content3" style="display: none">
+        <img src="https://4.bp.blogspot.com/-qgCd0X6Q5jo/WS7l8KhIztI/AAAAAAAABHk/w6t5pFbWdeUUjVoPFTjkvpraw3PDPtijwCLcB/s1600/Unity_Logo.png"
+          alt="Avatar" class="w3-left w3-margin-right" style="width:60px">
+        <span class="w3-right w3-opacity">January 2019</span>
+        <h4>Final Project</h4><br>
+        <hr class="w3-clear">
+        <p>Together with two colleagues we combined Scrum and Design thinking for our process and developed an
+          augmented reality android APK and a
+          React admin page.
+        </p>
+        <iframe src="http://ar.stefworks.ml/" style="border:none; width:100%; height:47vh;"></iframe>
+
+        <button type="button" onclick="window.open('https://github.com/stefanosAgelastos/gps-tourist-app')" class="w3-button w3-theme-d1 w3-margin-bottom"><i
+            class="fa fa-github"></i> &nbsp;Github</button>
+      </div>
+
+      <div class="Content3" style="display: none">
+        <img src="https://medialabamsterdam.com/toolkit/files/2016/06/DMT_logo.png" alt="Avatar" class="w3-left w3-margin-right"
+          style="width:60px">
+        <span class="w3-right w3-opacity">Nov 2018</span>
+        <h4>Prototype</h4><br>
+        <hr class="w3-clear">
+        <p>Design Thinking. JWT based authentication, reactive forms, redux.
+          Served from a Spring Boot app. Continuous Intergration with Jenkins github webhooks.
+        </p>
+        <div class="video-container">
+          <iframe width="853" height="480" src="https://www.youtube.com/embed/Lbq94Ef9qJY?start=3" frameborder="0"
+            allowfullscreen></iframe>
+        </div>
+      </div>
+
+      <div class="Content3" style="display: none">
         <img src="https://nodejs.org/static/images/logos/nodejs-new-pantone-black.png" alt="Avatar" class="w3-left w3-margin-right"
           style="width:60px">
         <span class="w3-right w3-opacity">May 2018</span>
@@ -228,9 +254,24 @@ height: 100%;
         <hr class="w3-clear">
         <p>NODEjs app, JWT based authentication, websockets, SQL persistence, DOCKER compose containerization.
         </p>
-        <iframe src="http://chat.stefworks.ml/" style="border:none; width:100%; height:300px;"></iframe>
+        <iframe src="http://chat.stefworks.ml/" style="border:none; width:100%; height:47vh;"></iframe>
         <button type="button" onclick="window.open('https://github.com/stefanosAgelastos/chatNodejs')"" class="
           w3-button w3-theme-d1 w3-margin-bottom"><i class="fa fa-github"></i> &nbsp;Github</button>
+      </div>
+
+      <div class="Content3" style="display: none">
+        <img src="https://angular.io/assets/images/logos/angularjs/AngularJS-Shield.svg" alt="Avatar" class="w3-left w3-margin-right"
+          style="width:60px">
+        <span class="w3-right w3-opacity">Jun 2018</span>
+        <h4>Administration SPA</h4><br>
+        <hr class="w3-clear">
+        <p>Angular5 front. JWT based authentication, reactive forms, redux.
+          Served from a Spring Boot app. Continuous Intergration with Jenkins github webhooks.
+        </p>
+        <iframe src="http://makeyourcv.stefworks.ml/" style="border:none; width:100%; height:47vh;"></iframe>
+
+        <button type="button" onclick="window.open('https://github.com/stefanosAgelastos/cvEditorFront')" class="w3-button w3-theme-d1 w3-margin-bottom"><i
+            class="fa fa-github"></i> &nbsp;Github</button>
       </div>
 
       <div class="Content3" style="display: none">
@@ -249,67 +290,15 @@ height: 100%;
             &nbsp;Demo </del></button>
       </div>
 
-      <div class="Content3" style="display: none">
-        <img src="https://angular.io/assets/images/logos/angularjs/AngularJS-Shield.svg" alt="Avatar" class="w3-left w3-margin-right"
-          style="width:60px">
-        <span class="w3-right w3-opacity">Jun 2018</span>
-        <h4>Administration SPA</h4><br>
-        <hr class="w3-clear">
-        <p>Angular5 front. JWT based authentication, reactive forms, redux.
-          Served from a Spring Boot app. Continuous Intergration with Jenkins github webhooks.
-        </p>
-        <iframe src="http://makeyourcv.stefworks.ml/" style="border:none; width:100%; height:300px;"></iframe>
-
-        <button type="button" onclick="window.open('https://github.com/stefanosAgelastos/cvEditorFront')" class="w3-button w3-theme-d1 w3-margin-bottom"><i
-            class="fa fa-github"></i> &nbsp;Github</button>
-        <button type="button" onclick="window.open('http://makeyourcv.stefworks.ml/')" class="w3-button w3-theme-d2 w3-margin-bottom"><i
-            class="fa fa-terminal"></i> &nbsp;Demo</button>
-      </div>
-
-      <div class="Content3" style="display: none">
-        <img src="https://medialabamsterdam.com/toolkit/files/2016/06/DMT_logo.png" alt="Avatar" class="w3-left w3-margin-right"
-          style="width:60px">
-        <span class="w3-right w3-opacity">Nov 2018</span>
-        <h4>Design Thinking</h4><br>
-        <hr class="w3-clear">
-        <p>Design Thinking. JWT based authentication, reactive forms, redux.
-          Served from a Spring Boot app. Continuous Intergration with Jenkins github webhooks.
-        </p>
-        <div class="video-container">
-          <iframe width="853" height="480" src="https://www.youtube.com/embed/Lbq94Ef9qJY?start=3" frameborder="0"
-            allowfullscreen></iframe>
-        </div>
-      </div>
-
-      <div class="Content3" style="display: none">
-        <img src="https://4.bp.blogspot.com/-qgCd0X6Q5jo/WS7l8KhIztI/AAAAAAAABHk/w6t5pFbWdeUUjVoPFTjkvpraw3PDPtijwCLcB/s1600/Unity_Logo.png"
-          alt="Avatar" class="w3-left w3-margin-right" style="width:60px">
-        <span class="w3-right w3-opacity">January 2019</span>
-        <h4>Final Project</h4><br>
-        <hr class="w3-clear">
-        <p>Together with two colleagues we developed our final project at KEA.
-          We combined Scrum and Design thinking for our process and developed an augmented reality android APK and a
-          React admin page.
-          Click the demo below to browse the admin page.
-        </p>
-        <iframe src="http://ar.stefworks.ml/" style="border:none; width:100%; height:300px;"></iframe>
-
-        <button type="button" onclick="window.open('https://github.com/stefanosAgelastos/gps-tourist-app')" class="w3-button w3-theme-d1 w3-margin-bottom"><i
-            class="fa fa-github"></i> &nbsp;Github</button>
-        <button type="button" onclick="window.open('http://ar.stefworks.ml/')" class="w3-button w3-theme-d2 w3-margin-bottom"><i
-            class="fa fa-terminal"></i> &nbsp;Demo</button>
-      </div>
       <!--THIRD PAGINATION, controls the content of the Section3 above -->
       <div id="Demo3" class="slidecontainer w3-container w3-padding-16">
         <div class="w3-center">
           <div class="w3-bar">
-            <a href="#" class="w3-bar-item w3-button">&laquo;</a>
             <a href="#" class="w3-button pContent3 w3-hover-red w3-red" onclick="pagination('Content3',1,'w3-red')">1</a>
             <a href="#" class="w3-button pContent3 w3-hover-red" onclick="pagination('Content3',2,'w3-red')">2</a>
             <a href="#" class="w3-button pContent3 w3-hover-red" onclick="pagination('Content3',3,'w3-red')">3</a>
             <a href="#" class="w3-button pContent3 w3-hover-red" onclick="pagination('Content3',4,'w3-red')">4</a>
             <a href="#" class="w3-button pContent3 w3-hover-red" onclick="pagination('Content3',5,'w3-red')">5</a>
-            <a href="#" class="w3-button">&raquo;</a>
           </div>
         </div>
       </div>
