FIXES: resize was hiding content,. content appending when reselecting

--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@ max-height: 50vh;
 
   <!-- SECTION2  -->
   <div class="w3-content">
-    <div id="Section2" class="w3-card w3-white w3-round " style="display: none">
+    <div id="Section2" class="w3-card w3-white w3-round" style="display: none">
 
-      <div class="Content2" style="display: none">
+      <div class="Content2" >
         <h6 class="w3-text-grey w3-margin-right w3-right">Copenhagen</h6>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Intern / <a href="http://www.koebenhavnerture.dk/" target="_blank">
@@ -228,7 +228,7 @@ max-height: 50vh;
     <div id="Section3" class="w3-container w3-card w3-white w3-round " style="display: none">
       <br>
 
-      <div class="Content3" style="display: none">
+      <div class="Content3">
         <img src="https://4.bp.blogspot.com/-qgCd0X6Q5jo/WS7l8KhIztI/AAAAAAAABHk/w6t5pFbWdeUUjVoPFTjkvpraw3PDPtijwCLcB/s1600/Unity_Logo.png"
           alt="Avatar" class="w3-left w3-margin-right" style="width:60px">
         <span class="w3-right w3-opacity">January 2019</span>
