Dummy data to test scrolling. content cards cover all content now.

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ max-height: 50vh;
   <div class="w3-content">
     <div id="Section2" class="w3-card w3-white w3-round" style="display: none">
 
-      <div class="Content2" >
+      <div class="Content2">
         <h6 class="w3-text-grey w3-margin-right w3-right">Copenhagen</h6>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Intern / <a href="http://www.koebenhavnerture.dk/" target="_blank">
@@ -140,6 +140,24 @@ max-height: 50vh;
           <p>Working with various product development tecniques, we designed and developed a VR experience for
             marketing purposes.
             We went also through an intensive 3-day course on Unity 3D.</p><br>
+          <hr>
+          <div class="w3-container">
+            <h5 class="w3-opacity"><b>Intern / <a href="http://www.koebenhavnerture.dk/" target="_blank">
+                  Københavner Ture</a></b></h5>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i> Oct 2018 - Nov 2018</h6>
+            <p>In a multidisciplinary team, we developed an AR
+              solution for this local guided-tours company.
+              Our goal is to "Bring Stories Alive" as well as to add a competitive advantage in the company's SoMe
+              presence. Received good feedback.
+              <hr>
+          </div>
+          <div class="w3-container">
+            <h5 class="w3-opacity"><b>Intern / <a href="http://www.chase-race.com/" target="_blank">Chase-Race</a></b></h5>
+            <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2018 - Oct 2018</h6>
+            <p>Working with various product development tecniques, we designed and developed a VR experience for
+              marketing purposes.
+              We went also through an intensive 3-day course on Unity 3D.</p><br>
+          </div>
         </div>
       </div>
 
