removed focus outline on buttons.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
   .slidecontainer {
     width: 100%;
   }
-
+  button:focus {
+    outline: none;
+    border-radius: 32px;
+    border:1px black;
+}
 
   .video-container {
 position: relative;
