FIX: pagination background color, white color, and fixed position

--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
   }
   button:focus {
     outline: none;
-    border-radius: 32px;
-    border:1px black;
 }
 
   .video-container {
@@ -231,13 +229,13 @@ max-height: 50vh;
       </div>
 
       <!--SECOND SLIDER, controls the content of the Section2 above -->
-      <div id="Demo2" class="slidecontainer w3-container w3-padding-16">
+      <div id="Demo2" class="slidecontainer w3-container" style="background-color:rgba(0, 0, 255, 0.7);">
         <div class="w3-center">
-          <div class="w3-bar">
-            <a href="#" class="w3-button pContent2 w3-hover-blue w3-blue" onclick="pagination('Content2',1,'w3-blue')">1</a>
-            <a href="#" class="w3-button pContent2 w3-hover-blue" onclick="pagination('Content2',2,'w3-blue')">2</a>
-            <a href="#" class="w3-button pContent2 w3-hover-blue" onclick="pagination('Content2',3,'w3-blue')">3</a>
-            <a href="#" class="w3-button pContent2 w3-hover-blue" onclick="pagination('Content2',4,'w3-blue')">4</a>
+          <div class="w3-bar" style="margin-top: 8px">
+            <a href="#" style=" color: white;" class="w3-button pContent2 w3-hover-blue w3-blue" onclick="pagination('Content2',1,'w3-blue')">1</a>
+            <a href="#" style=" color: white;" class="w3-button pContent2 w3-hover-blue" onclick="pagination('Content2',2,'w3-blue')">2</a>
+            <a href="#" style=" color: white;" class="w3-button pContent2 w3-hover-blue" onclick="pagination('Content2',3,'w3-blue')">3</a>
+            <a href="#" style=" color: white;" class="w3-button pContent2 w3-hover-blue" onclick="pagination('Content2',4,'w3-blue')">4</a>
           </div>
         </div>
       </div>
@@ -327,14 +325,14 @@ max-height: 50vh;
       </div>
 
       <!--THIRD PAGINATION, controls the content of the Section3 above -->
-      <div id="Demo3" class="slidecontainer w3-container w3-padding-16">
-        <div class="w3-center">
+      <div id="Demo3" class="slidecontainer w3-container"  style="background-color:rgba(255, 0, 0, 0.7);">
+        <div class="w3-center"  style="margin-top: 8px">
           <div class="w3-bar">
-            <a href="#" class="w3-button pContent3 w3-hover-red w3-red" onclick="pagination('Content3',1,'w3-red')">1</a>
-            <a href="#" class="w3-button pContent3 w3-hover-red" onclick="pagination('Content3',2,'w3-red')">2</a>
-            <a href="#" class="w3-button pContent3 w3-hover-red" onclick="pagination('Content3',3,'w3-red')">3</a>
-            <a href="#" class="w3-button pContent3 w3-hover-red" onclick="pagination('Content3',4,'w3-red')">4</a>
-            <a href="#" class="w3-button pContent3 w3-hover-red" onclick="pagination('Content3',5,'w3-red')">5</a>
+            <a href="#" style=" color: white;" class="w3-button pContent3 w3-hover-red w3-red" onclick="pagination('Content3',1,'w3-red')">1</a>
+            <a href="#" style=" color: white;" class="w3-button pContent3 w3-hover-red" onclick="pagination('Content3',2,'w3-red')">2</a>
+            <a href="#" style=" color: white;" class="w3-button pContent3 w3-hover-red" onclick="pagination('Content3',3,'w3-red')">3</a>
+            <a href="#" style=" color: white;" class="w3-button pContent3 w3-hover-red" onclick="pagination('Content3',4,'w3-red')">4</a>
+            <a href="#" style=" color: white;" class="w3-button pContent3 w3-hover-red" onclick="pagination('Content3',5,'w3-red')">5</a>
           </div>
         </div>
       </div>
