fixed pagination details, added buffer. it was hiding the content.

--- a/index.html
+++ b/index.html
@@ -229,7 +229,10 @@ max-height: 50vh;
       </div>
 
       <!--SECOND SLIDER, controls the content of the Section2 above -->
-      <div id="Demo2" class="slidecontainer w3-container" style="background-color:rgba(0, 0, 255, 0.7);">
+      <br>
+      <br>
+      <br>
+      <div id="Demo2" class="slidecontainer w3-container w3-round" style="background-color:rgba(0, 0, 255, 0.7);">
         <div class="w3-center">
           <div class="w3-bar" style="margin-top: 8px">
             <a href="#" style=" color: white;" class="w3-button pContent2 w3-hover-blue w3-blue" onclick="pagination('Content2',1,'w3-blue')">1</a>
@@ -245,7 +248,7 @@ max-height: 50vh;
   <!-- SECTION3  -->
   <div class="w3-content">
 
-    <div id="Section3" class="w3-container w3-card w3-white w3-round " style="display: none">
+    <div id="Section3" class=" w3-card w3-white w3-round " style="display: none">
       <br>
 
       <div class="Content3">
@@ -325,9 +328,12 @@ max-height: 50vh;
       </div>
 
       <!--THIRD PAGINATION, controls the content of the Section3 above -->
-      <div id="Demo3" class="slidecontainer w3-container"  style="background-color:rgba(255, 0, 0, 0.7);">
-        <div class="w3-center"  style="margin-top: 8px">
-          <div class="w3-bar">
+      <br>
+      <br>
+      <br>
+      <div id="Demo3" class="slidecontainer w3-container w3-round" style="background-color:rgba(255, 0, 0, 0.7);">
+        <div class="w3-center">
+          <div class="w3-bar" style="margin-top: 8px">
             <a href="#" style=" color: white;" class="w3-button pContent3 w3-hover-red w3-red" onclick="pagination('Content3',1,'w3-red')">1</a>
             <a href="#" style=" color: white;" class="w3-button pContent3 w3-hover-red" onclick="pagination('Content3',2,'w3-red')">2</a>
             <a href="#" style=" color: white;" class="w3-button pContent3 w3-hover-red" onclick="pagination('Content3',3,'w3-red')">3</a>
